[package]
name = "rusty_website_downloader"
version = "0.1.0"
authors = ["Sivakumar Kailasam <sivakumar.ur.friend@gmail.com>"]

# A short blurb about the package. This is not rendered in any format when
# uploaded to crates.io (aka this is not markdown).
# description = "..."

# These URLs point to more information about the repository.
# documentation = "..."
# homepage = "..."
repository = "https://github.com/sivakumar-kailasam/rusty_website_downloader.git"

# This points to a file in the repository (relative to this `Cargo.toml`). The
# contents of this file are stored and indexed in the registry.
readme = "./README.md"

keywords = [ "offline website" ]

license = "MIT"

[dependencies]
log        = "0.3"
env_logger = "0.3"
url        = "1.1.1"
clap       = { version = "2", features = [ "yaml", "suggestions", "color" ] }

